--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <img class="my-photo" src="/img/my-photo.jpg">
             <div class="inl intro-info">
                 <div class="my-name">Oleksii Shnyra</div>
-                <div>
+                <div style="text-align:justify;">
                     my tech backgrounds include:
                     <div class="skill-badge green-badge">Node.js</div>
                     <div class="skill-badge">ES6</div>
