--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <h1>Hi there,</h1>
-        <p>I am passionated developer from Ukraine, live in Kharkiv.</p>
+        <p>since 2010, I am passionated developer from Ukraine, live in Kharkiv.</p>
         <p>I like to create and use fast, secure, event-driven SPA with thoughtful design and architecture using latest web-technologies and concepts like "progressive web app".</p>
         <p>For recent times, I'm very interested in neural networks and data science at all. There are so much to learn and create very useful things in these fields.</p>
         <p>Though, I understand SOLID patterns and other OOP principles, follow best practices of writing code like <a href="https://github.com/airbnb/javascript">Airbnb js style guide</a>, I believe
