updated domcom url

--- a/cases/vk-stickers/index.html
+++ b/cases/vk-stickers/index.html
@@ -60,7 +60,7 @@ option{
     border-radius: 4px;
 }
 </style>
-<script src="https://cdn.rawgit.com/UABRO/domcom/master/source/domcom-min.js"></script>
+<script src="https://uabro.github.io/domcom-min.js"></script>
 <script>
 DC.ready(function(){
 'use strict';
