--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="/css/index.css">
-<script src="https://rawgit.com/UABRO/domcom/master/source/domcom-min.js"></script>
+<script src="https://uabro.github.io/domcom-min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
+<title>Oleksii Shnyra profile</title>
 <body>
     <script src="/js/index.js"></script>
     <div class="page-background"></div>
@@ -34,7 +36,7 @@
             </div>
         </div>
         <h1>Hi there,</h1>
-        <p>since 2010, I am passionated developer from Ukraine, live in Kharkiv.</p>
+        <p>since 2010, I am passionated developer from Ukraine, currently live in Kharkiv.</p>
         <p>I like to create and use fast, secure, event-driven SPA with thoughtful design and architecture using latest web-technologies and concepts like "progressive web app".</p>
         <p>For recent times, I'm very interested in neural networks and data science at all. There are so much to learn and create very useful things in these fields.</p>
         <p>Though, I understand SOLID patterns and other OOP principles, follow best practices of writing code like <a href="https://github.com/airbnb/javascript">Airbnb js style guide</a>, I believe
