--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="skill-badge orange-badge">JQuery</div>
                     <div class="skill-badge orange-badge">Socket.IO</div>
                     <div class="skill-badge orange-badge">Colu SDK</div>
-                    <div class="skill-badge green-badge">Java</div>
+                    <div class="skill-badge green-badge">Java (Android)</div>
                     <div class="skill-badge green-badge">PHP5</div>
                 </div>
             </div>
@@ -76,8 +76,7 @@
     <div class="page">
         <h1>Views on employment</h1>
         <p>Employment is good.</p>
-        <p>If I work at company it should be bidirectional help and communication. Company should provide its employee with best environment conditions and large resources
-            while employee should develop himself, be initiative and proactive, manipulate given resources in most efficient way to make company great each day of its existance.
+        <p>If I work at company it should be bidirectional help, communication and pride. Company should provide its employee with best environment conditions and large resources while employee should develop himself, be initiative and proactive, manipulate given resources in most efficient way to make company great each day of its existance.
         </p>
     </div>
     <div class="page">
