graph-search case added

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
         <ul>
             <li>This page
             <li><a class="link" href="/cases/seven/" target="_blank">Seven snakes (~830 KB)</a>
-                <div class="description">Seven snakes are smoothly crowling on surface of big sphere using WebGL</div>
+                <div class="description">Seven snakes are smoothly crowling on surface of big sphere using WebGL (Three.js)</div>
+            <li><a class="link" href="/cases/graph-search/" target="_blank">Graph search</a>
+                <div class="description">Interactive implementation of Dijkstra's algorithm in complex, randomly generated graph using Canvas.</div>
             <li><a class="link" href="https://uabro.com/" target="_blank">uabro.com</a>
-                <div class="description">Simple informational website about my organization</div>
+                <div class="description">Simple informational website about UABRO organization</div>
             <li><a class="link" href="https://ideas.uabro.com/" target="_blank">Ideas UABRO</a>
                 <div class="description">Project for working on your mind</div>
             <li><a class="link" href="https://mexy.pro/" target="_blank">mexy.pro</a>
@@ -65,11 +67,11 @@
             <li><a class="link" href="https://temp.mexy.pro/" target="_blank">temp.mexy.pro</a>
                 <div class="description">Fast temporary messaging web app - no regestration, conversation nor personal data storage.</div>
             <li><a class="link" href="https://github.com/UABRO/domcom" target="_blank">DomCom framework</a>
-                <div class="description">My own javascript framework inspired by JQuery and ReactJS.</div>
+                <div class="description">My own javascript framework inspired by ReactJS and JQuery. Short name - DC.</div>
             <li><a class="link" href="/cases/vk-stickers/" target="_blank">VK stickers viewer</a>
                 <div class="description">Simple viewer of VK stickers using my framework.</div>
             <li><a class="link" href="https://github.com/UABRO/domcom-quickstart" target="_blank">DomCom quickstart</a>
-                <div class="description">Rich and still basic, easy extensible open source back-end and front-end solution for creating SPA using DomCom framework for front-end.</div>
+                <div class="description">Rich and still basic, easy extensible open source back-end and front-end solution for creating SPA using DC framework for front-end.</div>
         </ul>
         <p>*for best experience use latest Chrome or Firefox on Windows desktop</p>
     </div>
