--- a/cases/seven/index.html
+++ b/cases/seven/index.html
@@ -8,7 +8,7 @@ body{
     overflow: hidden;
 }
 .page_background {
-    background-image: url(https://pp.vk.me/c604717/v604717424/1c2bd/jy18G4xVuhM.jpg);
+    background-image: url(background.jpeg);
     background-color: #555;
     background-position: center;
     background-repeat: no-repeat;
