--- a/index.html
+++ b/index.html
@@ -1,91 +1,84 @@
 <link rel="stylesheet" href="/css/index.css">
-<script src="https://uabro.github.io/domcom-min.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
+<script src="https://uabro.github.io/domcom.2.min.js"></script>
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
+<meta name="theme-color" content="#42a5b8">
+<meta name="msapplication-navbutton-color" content="#42a5b8">
+<meta name="apple-mobile-web-app-status-bar-style" content="#42a5b8">
 <title>Oleksii Shnyra profile</title>
 <body>
-    <script src="/js/index.js"></script>
-    <div class="page-background"></div>
-    <div class="page">
-        <div class="intro-container">
-            <img class="my-photo" src="/img/my-photo.jpg">
-            <div class="inl intro-info">
-                <div class="my-name">Oleksii Shnyra</div>
-                <div style="text-align:justify;">
-                    my tech backgrounds include:
-                    <div class="skill-badge green-badge">Node.js</div>
-                    <div class="skill-badge">ES6</div>
-                    <div class="skill-badge">HTML5</div>
-                    <div class="skill-badge">CSS3</div>
-                    <div class="skill-badge">WebSocket</div>
-                    <div class="skill-badge">SVG</div>
-                    <div class="skill-badge">Canvas</div>
-                    <div class="skill-badge">WebGL</div>
-                    <div class="skill-badge">Git</div>
-                    <div class="skill-badge">REST</div>
-                    <div class="skill-badge dark-badge">MySQL</div>
-                    <div class="skill-badge dark-badge">MongoDB</div>
-                    <div class="skill-badge dark-badge">OrientDB</div>
-                    <div class="skill-badge orange-badge">Angular 2</div>
-                    <div class="skill-badge orange-badge">ReactJS</div>
-                    <div class="skill-badge orange-badge">JQuery</div>
-                    <div class="skill-badge orange-badge">Socket.IO</div>
-                    <div class="skill-badge orange-badge">Colu SDK</div>
-                    <div class="skill-badge green-badge">Java (Android)</div>
-                    <div class="skill-badge green-badge">PHP5</div>
-                </div>
+<script src="/js/index.js"></script>
+<div class="page-background"></div>
+<div class="my-name">Oleksii Shnyra</div>
+<div class="page">
+    <div class="intro-container">
+        <div class="revert">
+            <div class="skill-badge">ES6</div>
+            <div class="skill-badge">HTML5</div>
+            <div class="skill-badge">CSS3</div>
+            <div class="skill-badge">WebSockets</div>
+            <div class="skill-badge">REST</div>
+            <div class="skill-badge">SVG</div>
+            <div class="skill-badge">Canvas</div>
+            <div class="skill-badge">WebGL</div>
+            <div class="skill-badge green-badge">Java (Android)</div>
+            <div class="skill-badge green-badge">Shell</div>
+            <div class="skill-badge green-badge">Go</div>
+            <div class="skill-badge green-badge">TypeScript</div>
+            <div class="skill-badge green-badge">Node.js</div>
+        </div>
+        <div><img class="my-photo" src="/img/my-photo.jpg"></div>
+        <div class="skill-badge dark-badge">MySQL</div>
+        <div class="skill-badge dark-badge">MongoDB</div>
+        <div class="skill-badge dark-badge">PostgreSQL</div>
+        <div class="skill-badge dark-badge">OrientDB</div>
+        <div class="skill-badge orange-badge">Angular 2</div>
+        <div class="skill-badge orange-badge">ReactJS</div>
+        <div class="skill-badge orange-badge">JQuery</div>
+        <div class="skill-badge orange-badge">Socket.IO</div>
+        <div class="skill-badge orange-badge">Colu SDK</div>
+        <div class="skill-badge pink-badge">Git</div>
+        <div class="skill-badge pink-badge">AWS</div>
+    </div>
+    <h1><span class="wb">Hi there</span></h1>
+    <p class="a1">Since 2010, I am passionated developer from Ukraine. Currently live in Kharkiv.</p>
+    <p class="a2">I love programming, performance and beauty.</p>
+    <p class="a2">I'm very interested in artificial intelligence and robotics. There are so much cool stuff we will
+        explore soon!</p>
+    <p class="a3">I believe people can transcend and inspire.</p>
+</div>
+<div class="page">
+    <h1><span class="wb">My cases</span></h1>
+    <ul class="cases">
+        <li><a class="link" href="/cases/seven/" target="_blank">Seven snakes</a>
+            <div class="description">Seven snakes are smoothly crawling on surface of sphere.
             </div>
-        </div>
-        <h1>Hi there,</h1>
-        <p>since 2010, I am passionated developer from Ukraine, currently live in Kharkiv.</p>
-        <p>I like to create and use fast, secure, event-driven SPA with thoughtful design and architecture using latest web-technologies and concepts like "progressive web app".</p>
-        <p>For recent times, I'm very interested in neural networks and data science at all. There are so much to learn and create very useful things in these fields.</p>
-        <p>Though, I understand SOLID patterns and other OOP principles, follow best practices of writing code like <a href="https://github.com/airbnb/javascript">Airbnb js style guide</a>, I believe
-        there are always new highs to learn and then, of course, achieve.</p>
-    </div>
-    <div class="page">
-        <h1>Education</h1>
-        <ul>
-            <li>Bachelor of law at National University "Yaroslav the Wise Law Academy of Ukraine"
-            <li>(in progress) Master of law at National University "Yaroslav the Wise Law Academy of Ukraine"
-        </ul>
-        <p>Well, I like social sciences and law particularly not less than technical things. Though, I have no technical education, my tech value lies in practical skills and abilities to build, create.</p>
-    </div>
-    <div class="page">
-        <h1>My cases</h1>
-        <ul>
-            <li>This page
-            <li><a class="link" href="/cases/seven/" target="_blank">Seven snakes (~830 KB)</a>
-                <div class="description">Seven snakes are smoothly crowling on surface of big sphere using WebGL (Three.js)</div>
-            <li><a class="link" href="/cases/graph-search/" target="_blank">Graph search</a>
-                <div class="description">Interactive implementation of Dijkstra's algorithm in complex, randomly generated graph using Canvas.</div>
-            <li><a class="link" href="https://uabro.com/" target="_blank">uabro.com</a>
-                <div class="description">Simple informational website about UABRO organization</div>
-            <li><a class="link" href="https://ideas.uabro.com/" target="_blank">Ideas UABRO</a>
-                <div class="description">Project for working on your mind</div>
-            <li><a class="link" href="https://mexy.pro/" target="_blank">mexy.pro</a>
-                <div class="description">Social network</div>
-            <li><a class="link" href="https://temp.mexy.pro/" target="_blank">temp.mexy.pro</a>
-                <div class="description">Fast temporary messaging web app - no regestration, conversation nor personal data storage.</div>
-            <li><a class="link" href="https://github.com/UABRO/domcom" target="_blank">DomCom framework</a>
-                <div class="description">My own javascript framework inspired by ReactJS and JQuery. Short name - DC.</div>
-            <li><a class="link" href="/cases/vk-stickers/" target="_blank">VK stickers viewer</a>
-                <div class="description">Simple viewer of VK stickers using my framework.</div>
-            <li><a class="link" href="https://github.com/UABRO/domcom-quickstart" target="_blank">DomCom quickstart</a>
-                <div class="description">Rich and still basic, easy extensible open source back-end and front-end solution for creating SPA using DC framework for front-end.</div>
-        </ul>
-        <p>*for best experience use latest Chrome or Firefox on Windows desktop</p>
-    </div>
-    <div class="page">
-        <h1>Views on employment</h1>
-        <p>Employment is good.</p>
-        <p>If I work at company it should be bidirectional help, communication and pride. Company should provide its employee with best environment conditions and large resources while employee should develop himself, be initiative and proactive, manipulate given resources in most efficient way to make company great each day of its existance.
-        </p>
-    </div>
-    <div class="page">
-        <div class="center">
-            <h1 style="padding:0;">Contact me via Messenger</h1>
-            <img class="messenger-photo" src="/img/messenger-photo.jpg">
-            <div style="padding-top: 15px"><a class="link" href="https://m.me/Oleksii.Shnyra" target="_blank">m.me/Oleksii.Shnyra</a></div>
+        <li><a class="link" href="/cases/graph-search/" target="_blank">Graph search</a>
+            <div class="description">Interactive implementation of Dijkstra's algorithm.
+            </div>
+        <li><a class="link" href="https://uabro.com/" target="_blank">uabro.com</a>
+            <div class="description">Static website for UABRO organization.</div>
+        <li><a class="link" href="https://mexy.pro/" target="_blank">mexy.pro</a>
+            <div class="description">Open source social network.</div>
+        <li><a class="link" href="https://temp.mexy.pro/" target="_blank">temp.mexy.pro</a>
+            <div class="description">Fast temporary messaging web app.
+            </div>
+        <li><a class="link" href="https://ideas.uabro.com/" target="_blank">Ideas UABRO</a>
+            <div class="description">Project for working on your mind.</div>
+        <li><a class="link" href="https://github.com/UABRO/domcom" target="_blank">DomCom</a>
+            <div class="description">JavaScript framework. Short name - DC.</div>
+        <li><a class="link" href="https://github.com/UABRO/domcom-quickstart" target="_blank">DomCom quickstart</a>
+            <div class="description">Rich and easy extensible open source solution for creating SPA.
+            </div>
+    </ul>
+    <p>*for best experience use latest Chrome on large screen</p>
+</div>
+<div class="page">
+    <div class="center">
+        <h1 style="padding:0;"><span class="wb">Contact me via Messenger</span></h1>
+        <img class="messenger-photo" src="/img/messenger-photo.jpg">
+        <div style="padding-top: 15px"><a class="link wb" href="https://m.me/Oleksii.Shnyra" target="_blank">m.me/Oleksii.Shnyra</a>
         </div>
     </div>
+</div>
 </body>
