fix version for threejs

--- a/cases/seven/index.html
+++ b/cases/seven/index.html
@@ -1,4 +1,4 @@
-<script src="https://threejs.org/build/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
 <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 <body>
 <script src="index.js"></script>
